--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(CenterData)
 export(ConvertGADMPosition2Region)
+export(ConvertMunicipalityNames)
 export(dfsort)
 export(FindProvince)
 export(GenerateMapColours)
@@ -12,8 +13,14 @@ export(GetHKK)
 export(GetHRIaluejakokartat)
 export(GetHSY)
 export(GetLukiot)
+export(GetMunicipalElectionData2000)
+export(GetMunicipalElectionData2004)
+export(GetMunicipalElectionData2008)
 export(GetMunicipalityInfo)
+export(GetMunicipalityInfoMML)
+export(GetMunicipalityInfoStatFi)
 export(GetOikotie)
+export(GetParliamentaryElectionData)
 export(GetPopulationRegister)
 export(GetPostalCodeInfo)
 export(GetPresidentti2012)
