--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Collate:
     'matrixOperations.R'
     'show-methods.R'
     'get.province.info.R'
+    'maps.R'
     'mml.R'
     'population.register.R'
     'visualization.R'
