--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,4 +57,5 @@ Collate:
     'elections2000.R'
     'elections2008.R'
     'elections2004.R'
+    'maps.R'
 Packaged: 2011-12-29 14:19:39 UTC; lei
