--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,14 +29,11 @@ Collate:
     'get.postal.codes.R'
     'Oikotie.R'
     'sorvi-package.R'
-    'stringOperations.R'
     'tilastokeskus.R'
     'utilities.R'
-    'vaalit.R'
     'worldbank.R'
     'HRI.R'
     'HSY.R'
-    'matrixOperations.R'
     'show-methods.R'
     'get.province.info.R'
     'maps.R'
@@ -46,7 +43,5 @@ Collate:
     'wms.R'
     'HKK.R'
     'elections.R'
-    'elections2000.R'
-    'elections2008.R'
-    'elections2004.R'
+    'Tilastokeskus-vaalidata.R'
 Packaged: 2011-12-29 14:19:39 UTC; lei
