data files remoed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(Presidentti2012GetUserData)
 export(Presidentti2012RateChoices)
 export(Presidentti2012RetrieveAnswerText)
 export(ReadShape)
+export(SorviData)
 export(SplitSpatial)
 export(Strip)
 export(UnitScale)
