--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(Presidentti2012ConvertOptionsToNumeric)
 export(Presidentti2012GetUserData)
 export(Presidentti2012RateChoices)
 export(Presidentti2012RetrieveAnswerText)
+export(ReadDatavaalit)
 export(ReadShape)
 export(SplitSpatial)
 export(Strip)
