Added functions for handling Finnish personal identification numbers (HETU).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(SplitSpatial)
 export(Strip)
 export(UnitScale)
 export(dfsort)
+export(hetu)
 export(is.url)
 export(korvaa.skandit)
 export(strstrip)
+export(valid.hetu)
