--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,4 +44,5 @@ Collate:
     'Tilastokeskus-vaalidata.R'
     'datavaalit.R'
     'hetu.R'
+    'eduskunta.R'
 Packaged: 2011-12-29 14:19:39 UTC; lei
