--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(GetHKK)
 export(GetHRIaluejakokartat)
 export(GetHSY)
 export(GetLukiot)
+export(GetMOTYritystuet)
 export(GetMunicipalElectionData2000)
 export(GetMunicipalElectionData2004)
 export(GetMunicipalElectionData2008)
