--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: sorvi - avoimen datan tyokalupakki
 Version: 0.1.86
 Date: 2012-09-10
 Author: Leo Lahti, Juuso Parkkinen and Joona Lehtomaki
-Maintainer: Louhos team <sorvi-admin@lists.r-forge.r-project.org>
+Maintainer: Louhos team <louhos@googlegroups.com>
 Description: Avoimen datan algoritmeja
 License: FreeBSD
 Depends:
