MoJ Data Routines, first round

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,12 @@ export(Presidentti2012ConvertOptionsToNumeric)
 export(Presidentti2012GetUserData)
 export(Presidentti2012RateChoices)
 export(Presidentti2012RetrieveAnswerText)
+export(ReadAllCandidates)
+export(ReadAllParties)
+export(ReadCandidates)
 export(ReadDatavaalit)
+export(ReadElectionData)
+export(ReadParties)
 export(ReadShape)
 export(SplitSpatial)
 export(Strip)
@@ -62,5 +67,6 @@ export(is.url)
 export(korvaa.skandit)
 export(strstrip)
 export(valid.hetu)
+export(vwReg)
 exportMethods(GetMember)
 exportMethods(GetParties)
