--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ConvertMunicipalityNames)
 export(FindProvince)
 export(GenerateMapColours)
 export(GetApurahat)
+export(GetElectedCandidates)
 export(GetElectionResultsPresidentti2012)
 export(GetGADM)
 export(GetGeocodeGoogleMaps)
