--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(dfsort)
 export(hetu)
 export(is.url)
 export(korvaa.skandit)
+export(read.px)
 export(strstrip)
 export(valid.hetu)
 export(vwReg)
