--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 export(CenterData)
+export(ConversionTableForMunicipalities)
 export(ConvertGADMPosition2Region)
 export(ConvertGADMResolution)
 export(ConvertMunicipalityCodes)
