--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(CenterData)
 export(ConversionTableForMunicipalities)
 export(ConvertGADMPosition2Region)
 export(ConvertGADMResolution)
+export(ConvertMMLToRData)
 export(ConvertMunicipalityCodes)
 export(ConvertMunicipalityNames)
 export(FindProvince)
