LoadMML added and tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(GetWMSlayers)
 export(GetWMSraster)
 export(GetWorldbankMigration)
 export(ListWMSurls)
+export(LoadData)
 export(LoadMML)
 export(LoadWMSurl)
 export(MergeSpatial)
