data path changed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(ListWMSurls)
 export(LoadData)
 export(LoadMML)
 export(LoadWMSurl)
+export(LouhosStoragePath)
 export(MergeSpatial)
 export(PlotMatrix)
 export(PlotScale)
