--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sorvi
 Type: Package
 Title: sorvi - avoimen datan tyokalupakki
-Version: 0.2.09
+Version: 0.2.10
 Date: 2012-11-07
 Author: Leo Lahti, Juuso Parkkinen and Joona Lehtomaki
 Maintainer: Louhos team <louhos@googlegroups.com>
@@ -40,10 +40,8 @@ Collate:
     'visualization.R'
     'wms.R'
     'HKK.R'
-    'elections.R'
-    'Tilastokeskus-vaalidata.R'
-    'datavaalit.R'
     'hetu.R'
     'yritystuet.R'
     'eduskunta.R'
     'pxR.R'
+    'vaalit.R'
